--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
 <h1>Demo project</h1>
 <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid doloremque eaque facilis ipsa ipsam itaque, nesciunt, possimus quae sapiente ullam, vero voluptatum! Consectetur dolorem eum laborum minus obcaecati temporibus voluptate?</h3>
+<ul>
+    <li>First</li>
+    <li>Second</li>
+</ul>
+<p>Copyrite</p>
 </body>
 </html>
