--- a/about.html
+++ b/about.html
@@ -7,5 +7,6 @@
 <body>
 <h1>Demo project</h1>
 <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid doloremque eaque facilis ipsa ipsam itaque, nesciunt, possimus quae sapiente ullam, vero voluptatum! Consectetur dolorem eum laborum minus obcaecati temporibus voluptate?</h3>
+<p>End</p>
 </body>
 </html>
